--- a/css/modules/document-share.css
+++ b/css/modules/document-share.css
@@ -593,8 +593,8 @@
 
 #virtualclassCont .dashboardview .qq-uploader-selector.qq-uploader{
     width: 100%;
-    height: 80vh;
-    max-height: 81vh;
+    height: 100%;
+    max-height: 100%;
     border:none;
 
 }
